--- a/old-style.css
+++ b/old-style.css
@@ -12,25 +12,18 @@ body{
     background: #FFF;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 main{
     width: 100%;
     max-width: 1200px;
     margin: auto;
 }
-header{
-    display: flex;
-    width: 100%;
-    max-width: 1900px;
-    background-color: #FFF;
-}
 #home{
     display: flex;
     justify-content: space-between;
-    background-color: #FFF;
     width: 100%;
     max-width: 1200px;
     margin: auto;
+    height: auto;
 }
 
 .menu-logo {
@@ -64,6 +57,7 @@ header{
     font-family: 'Inter', sans-serif;
     font-size: 18px;
     font-style: normal;
+    text-align: left;
     font-weight: 400;
     line-height: normal;
     letter-spacing: -1.2px;
@@ -72,7 +66,7 @@ header{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 3%;
+    top: 2.5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -112,7 +106,6 @@ header{
     }
 }
 
-
 .slider-wrapper i{
     position: absolute;
     height: 50px;
@@ -122,109 +115,16 @@ header{
     font-style: normal;
     font-weight: 400;
     color: #FFF;
-    background-color: #000;
     border-radius: 50%;
     cursor: pointer;
     top: 50%;
+    z-index: 1;
 }
-#left{
+.slider-wrapper i:first-child{
     left: 2%;
 }
-#right{
+.slider-wrapper i:last-child{
     right: 2%;
-}
-
-.slider-wrapper {
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-}
-.slider{
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    scrollbar-width: 0;
-    box-shadow: 0 1.5rem 3 rem -0.75rem hsla(0, saturation, lightness, alpha);
-    /*background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 23.96%, #000 100%);*/
-}
-.slider::-webkit-scrollbar{
-    display: none;
-}
-.slider.dragging .slide-img{
-    cursor: grab;
-    user-select: none;
-}
-.slider.no-transition{
-    scroll-behavior: auto;
-}
-
-
-.card {
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    scroll-snap-type: none;
-    object-fit: cover;
-    width: 100%;
-    max-width: 1990px;
-}
-
-.slide-img{
-    display: flex;
-    z-index: 1;
-    /*height: 800px;*/
-}
-.slide-content{
-    position: absolute;
-    top: 0;
-    z-index: 1;
-    color: white;
-    text-decoration: none;
-}
-
-.slider-nav{
-    display: flex;
-    column-gap: 0.5rem;
-    position: absolute;
-    bottom: 1rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-}
-
-.slider-nav a{
-    width: 0.5rem;
-    height: 0.5rem;
-    border-radius: 50%;
-    background-color: #333;
-    opacity: 0.75;
-    transition: opacity ease 250ms;
-}
-
-.slider-nav a:hover{
-    opacity: 1;
-    background-color: #FFF;
-    cursor: pointer;
-}
-
-/*.slider-wrapper {
-    display: inline;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 1990px;
-    margin: auto;
-    overflow: hidden;
-}
-.slider{
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scrollbar-width: 0;
-    scroll-behavior: smooth;
-    box-shadow: 0 1.5rem 3 rem -0.75rem hsla(0, saturation, lightness, alpha);
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 23.96%, #000 100%);
-
 }
 .slider::-webkit-scrollbar{
     display: none;
@@ -238,42 +138,78 @@ header{
 .slider.no-transition{
     scroll-behavior: auto;
 }
-.card a{
-    display: flex;
-    width: 100%;
+
+.slider-wrapper{
+    position: relative;
+    min-width: 200px;
     max-width: 1990px;
     margin: auto;
-    max-height: 900px;
-    align-items: center;
 }
-.card a img{
-    align-items: stretch;
-    object-fit: cover;
-}
-.slider h2, .slider h4, .slider h3, .slider h5{
-    position: absolute;
-    color: black;
-}
-.slider a {
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    scroll-snap-type: none;
-    object-fit: cover;
+/*.container{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
+    max-width: 2000px;
+    max-height: 800px;
+    scroll-behavior: smooth;
 }*/
+.slider-wrapper{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    animation: scroll 40% linear infinite;
+}
+/*.slider{
+    margin-top: 80px;
+    display: flex;
+    width: auto;
+    scroll-snap-type: x mandatory;
+    transition: opacity 200ms;
+    scroll-behavior: smooth;
+    animation: scroll 40% linear infinite;
+}*/
+.card{
+    margin: auto;
+    align-items: stretch;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+.card img{
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+.slider-nav{
+    position: absolute;
+    display: flex;
+    column-gap: 0.5rem;
+    position: relative;
+    align-items: center;
+    bottom: 15px;
+    left: 100%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
 
+.slider-nav a{
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: gray;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+}
 
-@media only screen and (max-width: 768px){
-    .sobre{
-        display: flex;
-        width: 100%;
-        max-width: 1980px;
-    }
-    .sobre p{
-        display: flex;
-        width: 100%;
-        max-width: 800px;
-
-    }
+.slider-nav a:hover{
+    opacity: 1;
+    background-color: #FFF;
+    cursor: pointer;
 }
 
 .sobre{
@@ -281,9 +217,9 @@ header{
     width: 100%;
     max-width:800px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 300px;
     margin-bottom: 120px;
-    padding: 0 10.75vw;
+    padding: 0 10vw;
 }
 .sobre p{
     display: flex;
@@ -330,6 +266,7 @@ header{
     font-weight: 400;
     line-height: 100%; /* 16px */
 }
+
 @media only screen and (max-width: 768px){
     .sobre{
         display: flex;
