--- a/annexe.css
+++ b/annexe.css
@@ -62,7 +62,7 @@ body{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 2.5%;
+    top: 4%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -86,6 +86,7 @@ body{
         flex-direction: column;
         align-items: center;
         width: 100%;
+        height: 100px;
     }
     .navbar{
         padding: 1px 48px;
