--- a/asacciones.css
+++ b/asacciones.css
@@ -64,7 +64,7 @@ main{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 2.5%;
+    top: 4%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -88,6 +88,7 @@ main{
         flex-direction: column;
         align-items: center;
         width: 100%;
+        height: 100px;
     }
     .navbar{
         padding: 1px 48px;
