--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 3%;
+    top: 4%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -96,9 +96,10 @@ header{
         flex-direction: column;
         align-items: center;
         width: 100%;
+        height: 100px;
     }
     .navbar{
-        padding: 1px 48px;
+        padding: 2px 48px;
     }    
     #home{
         display: flex;
@@ -182,7 +183,7 @@ header{
     display: flex;
     column-gap: 0.5rem;
     position: absolute;
-    bottom: 1rem;
+    bottom: -1rem;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
