--- a/asacciones.css
+++ b/asacciones.css
@@ -31,8 +31,8 @@ main{
 }
 
 .menu-logo img{
-    width: 100%;
-    height: 43px;
+    width: 166px;
+    height: 63px;
 }
 
 .navbar{
@@ -64,7 +64,7 @@ main{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 4%;
+    top: 5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
