--- a/atelielv.css
+++ b/atelielv.css
@@ -29,8 +29,8 @@ body{
 }
 
 .menu-logo img{
-    width: 100%;
-    height: 43px;
+    width: 166px;
+    height: 63px;
 }
 
 .navbar{
@@ -62,7 +62,7 @@ body{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 4%;
+    top: 5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
