--- a/odoyalounge.css
+++ b/odoyalounge.css
@@ -28,8 +28,8 @@ body{
     padding: 8px 0px 8px 18px;
 }
 .menu-logo img{
-    width: 100%;
-    height: 43px;
+    width: 166px;
+    height: 63px;
 }
 
 .navbar{
@@ -61,7 +61,7 @@ body{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 2.5%;
+    top: 5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -85,6 +85,7 @@ body{
         flex-direction: column;
         align-items: center;
         width: 100%;
+        height: 100px;
     }
     .navbar{
         padding: 1px 48px;
