--- a/renovasp.css
+++ b/renovasp.css
@@ -8,8 +8,6 @@
     src: url('NHAASGROTESKTXPRO-55RG.ttf') format('truetype');
 }
 
-body{
-}
 main{
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(70, 69, 69);
@@ -31,8 +29,8 @@ main{
 }
 
 .menu-logo img{
-    width: 100%;
-    height: 43px;
+    width: 166px;
+    height: 63px;
 }
 
 .navbar{
@@ -64,7 +62,7 @@ main{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 2.5%;
+    top: 5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -88,6 +86,7 @@ main{
         flex-direction: column;
         align-items: center;
         width: 100%;
+        height: 100px;
     }
     .navbar{
         padding: 1px 48px;
