--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 4%;
+    top: 5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -149,8 +149,6 @@ header{
     scroll-behavior: smooth;
     scrollbar-width: 0;
     box-shadow: 0 1.5rem 3 rem -0.75rem hsla(0, saturation, lightness, alpha);
-    /*background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 23.96%, #000 100%);*/
-
 }
 .slider::-webkit-scrollbar{
     display: none;
@@ -183,18 +181,18 @@ header{
     display: flex;
     column-gap: 0.5rem;
     position: absolute;
-    bottom: -1rem;
+    bottom: 1rem;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
 }
 
 .slider-nav a{
-    width: 0.5rem;
-    height: 0.5rem;
+    width: 0.6rem;
+    height: 0.6rem;
     border-radius: 50%;
-    background-color: #333;
-    opacity: 0.75;
+    background-color: #fff;
+    opacity: 0.5;
     transition: opacity ease 250ms;
 }
 
@@ -440,7 +438,6 @@ header{
         font-weight: 700;
         line-height: normal;
     }
-
     .slider2-nav a{
         width: 0.5rem;
         height: 0.5rem;
@@ -463,7 +460,6 @@ header{
     #arrowSlider2:last-child{
         right: 0;
     }
-
 }
 .contato{
     padding: 0 2em;
