--- a/casamilano.css
+++ b/casamilano.css
@@ -428,11 +428,11 @@ body{
 .slider2-wrapper i:active{
     transform: translateY(-50%) scale(0.85);
 }
-#prev2{
-    left: 20px;
+.slider2-wrapper i:first-child{
+    left: -90%;
 }
-#next2{
-    right: 50px;
+.slider2-wrapper i{
+    right: 3%;
 }
 
 .carousel li {
