--- a/styleProjetos.css
+++ b/styleProjetos.css
@@ -1,420 +1,1 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-@font-face {
-    font-family: 'Neue Haas Grotesk Display Pro';
-    src: url('NHAASGROTESKTXPRO-55RG.ttf') format('truetype');
-}
-
-body{
-    background: #FFF;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-main{
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-}
-
-#home{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    height: auto;
-}
-
-.menu-logo {
-    display: flex;
-    max-width: fit-content;
-    padding: 8px 0px 8px 18px;
-}
-
-.menu-logo img{
-    width: 166px;
-    height: 63px;
-}
-
-.navbar{
-    display: flex;
-    padding: 24px 48px;
-}
-
-.menu-links{
-    display: flex;
-    justify-content: space-between;
-    width: 318px;
-    height: auto;
-    align-items: center;
-}
-
-.menu-links a{
-    display: block;
-    color: #000;
-    text-decoration: none;
-    font-family: 'Inter', sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: -1.2px;
-}
-
-.btn-toggle {
-    position: absolute;
-    right: 3rem;
-    top: 5%;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 15px;
-    height: 15px;
-}
-
-.btn-toggle .bar{
-    height: 3px;
-    width: 100%;
-    background-color: #333;
-    border-radius: 20px;
-}
-
-@media only screen and (max-width: 768px){
-    .btn-toggle {
-        display: flex;
-    }
-    .menu-links{
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        height: 100px;
-    }
-    .navbar{
-        padding: 1px 48px;
-    }    
-    #home{
-        display: flex;
-        flex-direction: column;
-    }
-    .menu-links a{
-        padding: .25rem 2rem;
-    }
-    .menu-links.active {
-        display: flex;
-    }
-}
-
-.name{
-    align-items: center;
-    justify-content: center;
-    padding: 0 2vw;
-    padding-top: 50px;
-    margin: auto;
-}
-.name h1{
-    font-size: 17vw;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: black;
-    text-align: start;
-}
-
-@media only screen and (min-width: 1200px) {
-    .name h1{
-        font-size: 210px;
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        color: black;
-        text-align: start;
-    }
-}
-
-.container{
-    width: 100%;
-    max-width: 1200px;
-}
-
-.container1, .container3, .container5, .container7, .container8{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: auto;
-    padding: 0 2vw;
-    margin-top: 100px;
-    column-gap: 1.5vw;
-}
-
-.container2, .container4, .container6{
-    display: flex;
-    align-items: center;
-    width: auto;
-    width: 100%;
-    height: auto;
-    padding: 0 2vw;
-    margin-top: 100px;
-    justify-content: center;
-    /*transform: translateX(50%);*/
-    z-index: 1;
-}
-
-.card1, .card2, .card3, .card4, .card5, .card5, .card6, .card7, .card8, .card9, .card10, .card11, .card12, .card13{
-    display: block;
-    align-items: center;
-    left: 50%;
-    padding-bottom: 10px;
-}
-
-.card1 h1, .card2 h1, .card3 h1, .card4 h1, .card5 h1, .card6 h1, .card7 h1, .card8 h1, .card9 h1, .card10 h1, .card11 h1, .card12 h1, .card13 h1{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 27px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 0.8;
-    color: black;
-}
-
-.card1 h2, .card2 h2, .card3 h2, .card4 h2, .card5 h2, .card5 h2, .card6 h2, .card7 h2, .card8 h2, .card9 h2, .card10 h2, .card11 h2, .card12 h2, .card13 h2{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    font-style: normal;
-}
-.card1 h3, .card2 h3, .card3 h3, .card4 h3, .card5 h3, .card5 h3, .card6 h3, .card7 h3, .card8 h3, .card9 h3, .card10 h3, .card11 h3, .card12 h3, .card13 h3{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    font-style: normal;
-}
-.card1 h4, .card2 h4, .card3 h4, .card4 h4, .card5 h4, .card5 h4, .card6 h4, .card7 h4, .card8 h4, .card9 h4, .card10 h4, .card11 h4, .card12 h4, .card13 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 125px;
-}
-
-.card1 h4, .card2 h4, .card3 h4, .card4 h4, .card5 h4, .card5 h4, .card8 h4 {
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 125px;
-}
-
-.card6 h4, .card7 h4,  .card9 h4, .card10 h4, .card11 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 73px;    
-}
-
-.card12 h4, .card13 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 83px; 
-}
-@media screen and (max-width: 780px){
-    .container{
-        margin-top: 50px;
-    }
-    .container1, .container3, .container5, .container7, .container8{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        max-width: 900px;
-        margin: auto;
-        height: auto;
-        padding: 0 2vw;
-    }
-    .container2, .container4, .container6{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        max-width: 900px;
-        margin: auto;
-        height: auto;
-        padding: 0 2vw;
-        justify-content: center;
-        /*transform: translateX(50%);*/
-        z-index: 1;
-    }
-    .card1, .card2, .card3, .card4, .card5, .card5, .card6, .card7, .card8, .card9, .card10, .card11, .card12, .card13{
-        margin-bottom: 40px;
-    }
-    .card1 img, .card2 img, .card3 img, .card4 img, .card5 img, .card5 img, .card6 img, .card7 img, .card8 img, .card9 img, .card10 img, .card11 img, .card12 img, .card13 img{
-        height: 450px;
-        max-height: 100%;
-    }
-    .card10 h1, .card5 h1 {
-        width: 200px;
-        margin-top: 5px;
-    }
-}
-@media screen and (max-width: 580px){
-    .card1 img, .card2 img, .card3 img, .card4 img, .card5 img, .card5 img, .card6 img, .card7 img, .card8 img, .card9 img, .card10 img, .card11 img, .card12 img, .card13 img{
-        height: 350px;
-        max-height: 100%;
-    }
-
-}
-
-
-
-
-.contato{
-    padding: 0 10rem;
-    margin-bottom: 220px;
-    margin-top:100px;
-}
-
-.contato h1{
-    width: 100%;
-    max-width: 1900px;
-    font-family: 'Inter', sans-serif;
-    font-size: 13rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-align: stretch;
-    justify-content: start;
-}
-
-.contato p{
-    text-align: center;
-}
-
-@media only screen and (max-width: 768px){
-    .contato{
-        padding: 0 2rem;
-        margin-bottom: 120px;
-    }
-    .contato h1{
-        font-size: 7rem;
-    }
-}
-@media only screen and (max-width: 588px){
-    .contato{
-        padding: 0 2rem;
-        margin-bottom: 120px;
-    }
-    .contato h1{
-        font-size: 4rem;
-    }
-    .contato p{
-        text-align: right;
-    }
-}
-
-footer {
-    background-color: black;
-    padding: 20px 30px 15px;
-}
-
-.grid-footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    color: #a3a3a3;
-    padding-bottom: 50px;
-}
-
-.grid-footer img{
-    width: 250px;
-    grid-column-start: 1;
-    grid-row-start: 1;
-    padding: 30px 50px 10px;
-    position: absolute;
-}
-
-@media screen and (max-width: 560px) {
-    .grid-footer img{
-        width: 190px;
-        height: auto;
-        padding-left: 10px;}
-}
-
-
-.grid-footer h2{
-    margin-top: 1.25rem;
-    grid-column-start: 3;
-    grid-row-start: 1;
-    font-family: Arial, Helvetica, sans-serif;
-    align-items: center;
-    font-size: 14px;
-    font-weight: 700 bold;
-}
-
-.grid-footer h5{
-    margin-top: 1.5rem;
-    grid-column-start: 3;
-    grid-row-start: 2;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-}
-
-.grid-footer h6{
-    margin-top: 1.25rem;
-    grid-column-start: 3;
-    grid-row-start: 3;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-}
-.grid-footer a{
-    grid-column-start: 3;
-    grid-row-start: 4;
-}
-
-.copyright{
-    padding: 20px 20px 0px;
-    color: #333;
-    width: 100%;
-    max-width: 1900px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    border-top: solid 2px #333;
-}
+#home,main{width:100%;max-width:1200px;margin:auto}#home,.menu-links{display:flex;height:auto}#home,.name,main{margin:auto}.menu-links a,.name h1{font-weight:400;color:#000;font-style:normal}*{margin:0;padding:0;box-sizing:border-box}@font-face{font-family:'Neue Haas Grotesk Display Pro';src:url(NHAASGROTESKTXPRO-55RG.ttf) format("truetype")}body{background:#fff;font-family:Arial,Helvetica,sans-serif}#home{justify-content:space-between}.menu-logo{display:flex;max-width:fit-content;padding:8px 0 8px 18px}.menu-logo img{width:166px;height:63px}.navbar{display:flex;padding:24px 48px}.menu-links{justify-content:space-between;width:318px;align-items:center}.menu-links a{display:block;text-decoration:none;font-family:Inter,sans-serif;font-size:18px;line-height:normal;letter-spacing:-1.2px}.btn-toggle{position:absolute;right:3rem;top:5%;display:none;flex-direction:column;justify-content:space-between;width:15px;height:15px}.btn-toggle .bar{height:3px;width:100%;background-color:#333;border-radius:20px}.name{align-items:center;justify-content:center;padding:50px 2vw 0}.name h1{font-size:17vw;font-family:Arial,Helvetica,sans-serif;text-align:start}@media only screen and (min-width:1200px){.name h1{font-size:210px;font-family:Arial,Helvetica,sans-serif;font-weight:400;font-style:normal;color:#000;text-align:start}}.container{width:100%;max-width:1200px}.container1,.container3,.container5,.container7,.container8{display:flex;justify-content:space-between;width:100%;height:auto;padding:0 2vw;margin-top:100px;column-gap:1.5vw}.container2,.container4,.container6{display:flex;align-items:center;width:100%;height:auto;padding:0 2vw;margin-top:100px;justify-content:center;z-index:1}.card1,.card10,.card11,.card12,.card13,.card2,.card3,.card4,.card5,.card6,.card7,.card8,.card9{display:block;align-items:center;left:50%;padding-bottom:10px}.card1 h1,.card10 h1,.card11 h1,.card12 h1,.card13 h1,.card2 h1,.card3 h1,.card4 h1,.card5 h1,.card6 h1,.card7 h1,.card8 h1,.card9 h1{display:block;align-items:end;padding-bottom:5px;font-family:Arial,Helvetica,sans-serif;font-size:27px;font-weight:400;font-style:normal;line-height:.8;color:#000}.card1 h2,.card10 h2,.card11 h2,.card12 h2,.card13 h2,.card2 h2,.card3 h2,.card4 h2,.card5 h2,.card6 h2,.card7 h2,.card8 h2,.card9 h2{display:block;align-items:end;padding-bottom:5px;font-family:Arial,Helvetica,sans-serif;font-size:16px;font-weight:700;font-style:normal}.card1 h3,.card10 h3,.card11 h3,.card12 h3,.card13 h3,.card2 h3,.card3 h3,.card4 h3,.card5 h3,.card6 h3,.card7 h3,.card8 h3,.card9 h3{display:block;align-items:end;padding-bottom:5px;font-family:Arial,Helvetica,sans-serif;font-size:14px;font-weight:700;font-style:normal}.card10 h4,.card11 h4,.card12 h4,.card13 h4,.card6 h4,.card7 h4,.card9 h4{padding:5px;font-family:Arial,Helvetica,sans-serif;font-size:12px;font-weight:700;font-style:normal}.card1 h4,.card10 h4,.card11 h4,.card12 h4,.card13 h4,.card2 h4,.card3 h4,.card4 h4,.card5 h4,.card6 h4,.card7 h4,.card8 h4,.card9 h4{padding:5px;align-items:center;font-family:Arial,Helvetica,sans-serif;font-size:12px;font-weight:700;font-style:normal;border:1px solid #000;border-radius:20px;width:125px}.card10 h4,.card11 h4,.card6 h4,.card7 h4,.card9 h4{align-items:center;border:1px solid #000;border-radius:20px;width:73px}.card12 h4,.card13 h4{align-items:center;border:1px solid #000;border-radius:20px;width:83px}@media screen and (max-width:780px){.container{margin-top:50px}.container1,.container3,.container5,.container7,.container8{display:flex;flex-direction:column;align-items:center;width:100%;max-width:900px;margin:auto;height:auto;padding:0 2vw}.container2,.container4,.container6{display:flex;flex-direction:column;align-items:center;width:100%;max-width:900px;margin:auto;height:auto;padding:0 2vw;justify-content:center;z-index:1}.card1,.card10,.card11,.card12,.card13,.card2,.card3,.card4,.card5,.card6,.card7,.card8,.card9{margin-bottom:40px}.card1 img,.card10 img,.card11 img,.card12 img,.card13 img,.card2 img,.card3 img,.card4 img,.card5 img,.card6 img,.card7 img,.card8 img,.card9 img{height:450px;max-height:100%}.card10 h1,.card5 h1{width:200px;margin-top:5px}}.contato h1,.copyright{width:100%;max-width:1900px}@media screen and (max-width:580px){.card1 img,.card10 img,.card11 img,.card12 img,.card13 img,.card2 img,.card3 img,.card4 img,.card5 img,.card6 img,.card7 img,.card8 img,.card9 img{height:350px;max-height:100%}}.contato{padding:0 10rem;margin-bottom:220px;margin-top:100px}.contato h1{font-family:Inter,sans-serif;font-size:13rem;font-style:normal;font-weight:400;line-height:normal;text-align:stretch;justify-content:start}.grid-footer h2,.grid-footer h5,.grid-footer h6{font-family:Arial,Helvetica,sans-serif}.contato p{text-align:center}@media only screen and (max-width:768px){#home,.btn-toggle,.menu-links.active{display:flex}.menu-links{display:none;flex-direction:column;align-items:center;width:100%;height:100px}.navbar{padding:1px 48px}#home{flex-direction:column}.menu-links a{padding:.25rem 2rem}.contato{padding:0 2rem;margin-bottom:120px}.contato h1{font-size:7rem}}@media only screen and (max-width:588px){.contato{padding:0 2rem;margin-bottom:120px}.contato h1{font-size:4rem}.contato p{text-align:right}}footer{background-color:#000;padding:20px 30px 15px}.grid-footer{display:grid;grid-template-columns:1fr 1fr 1fr;color:#a3a3a3;padding-bottom:50px}.grid-footer img{width:250px;grid-column-start:1;grid-row-start:1;padding:30px 50px 10px;position:absolute}@media screen and (max-width:560px){.grid-footer img{width:190px;height:auto;padding-left:10px}}.grid-footer h2{margin-top:1.25rem;grid-column-start:3;grid-row-start:1;align-items:center;font-size:14px;font-weight:700 700}.copyright,.grid-footer h5,.grid-footer h6{font-size:14px;font-weight:400}.grid-footer h5{margin-top:1.5rem;grid-column-start:3;grid-row-start:2}.grid-footer h6{margin-top:1.25rem;grid-column-start:3;grid-row-start:3}.grid-footer a{grid-column-start:3;grid-row-start:4}.copyright{padding:20px 20px 0;color:#333;display:flex;align-items:center;justify-content:center;font-family:Arial,sans-serif;border-top:2px solid #333}
