--- a/style.css
+++ b/style.css
@@ -4,11 +4,19 @@
     box-sizing:border-box
     }
     
-    @font-face {
-    font-family:'Neue Haas Grotesk Display Pro';
-    src:url(NHAASGROTESKTXPRO-55RG.ttf) format("truetype")
-    }
-    
+@font-face {
+    font-family: 'Neue';
+    src: 
+    local('Neue');
+    src: url('NEUEHAASDISPLAYBLACK.TTF') format('truetype');
+    src: url('NHAASGROTESKTXPRO65MD.eot?#iefix') format('embedded-opentype'); 
+    src:url('NHAASGROTESKTXPRO65MD.eot'),
+         url('NHAASGROTESKTXPRO65MD.woff') format('woff'),
+         url('NHAASGROTESKTXPRO65MD.woff2') format('woff2'),
+         url('NHAASGROTESKTXPRO65MD.svg#NeueHaasGroteskDisplayPro') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
     body {
     background:#FFF;
     font-family:Arial,Helvetica,sans-serif
