font test + mobile final

--- a/arco.css
+++ b/arco.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 @font-face {
-    font-family: 'Neue';
+    font-family: 'Neue Haas Grotesk Display Pro';
     src: 
     local('Neue');
     src: url('NEUEHAASDISPLAYBLACK.TTF') format('truetype');
