--- a/vilaoxalaii.css
+++ b/vilaoxalaii.css
@@ -456,6 +456,7 @@ body{
         padding-top: 0px;        
     }
 }
+
 .slider2-wrapper{
     position: relative;
     align-items: center;
@@ -468,61 +469,26 @@ body{
     padding-bottom: 100px;
     background-color: #f0f0f0;
 }
-.slider2-wrapper i{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: transform 0.1s linear;
-    background-color: transparent;
-    color: #FFF;
-    font-size: 3vw;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-    font-style: normal;
+.swiper-button-next{
+    z-index: 9;
 }
-.slider2-wrapper i:active{
-    transform: translateY(-50%) scale(0.85);
-}
-#prev2{
-    left: 20px;
-}
-#next2{
-    right: 50px;
-}
-.carousel li {
+.textslide {
     flex-direction: column;
     align-items: center;
     justify-content: center;
     list-style: none;
-    height: 500px;
+    height: 430px;
     width: 100%;
     margin-top: 40px;
     cursor: pointer;
+    margin-left: 10px;
 }
-.carousel.dragging .card{
-    cursor: grab;
-    user-select: none;
-}
-.slider2-wrapper .carousel {
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: auto;
-    gap: 10px;
-    overflow-x: hidden;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-}
-.carousel .card{
-    scroll-snap-align: start;
-}
-.slider2-wrapper .carousel .textslide a img{
-    height: 380px;
+.slider2-wrapper .textslide a img{
+    height: 320px;
     width: auto;
     margin: auto;
 }
+
 #textslide1, #textslide2, #textslide3, #textslide4, #textslide5, #textslide6, #textslide7, #textslide8, #textslide9, #textslide10, #textslide11, #textslide12, #textslide13,#textslide14, #textslide15, #textslide16  {
     display: block;
     align-items: center;
@@ -641,19 +607,11 @@ body{
     width: 90px; 
 }
 @media screen and (max-width: 790px) {
-    .slider2-wrapper .carousel{
-        grid-auto-columns: auto;
-    }
-    .slider2-wrapper i{
-        height: 40px;
-        width: 40px;
-        text-align: center;
-        line-height: 50px;
-        background-color: transparent;
-        color: #FFF;
-        font-size: 5vw;
+    .slider2-wrapper .textslide a img{
+        height: 250px;
     }
 }
+
 footer {
     background-color: black;
     padding: 20px 30px 15px;
