--- a/casajc66.css
+++ b/casajc66.css
@@ -463,6 +463,7 @@ body{
     }
 }
 
+
 .slider2-wrapper{
     position: relative;
     align-items: center;
@@ -502,17 +503,16 @@ body{
     padding-bottom: 10px;
 }
 
-#textslide1 h1, #textslide2 h1, #textslide3 h1, #textslide4 h1, #textslide5 h1, #textslide6 h1, #textslide7 h1, #textslide8 h1, #textslide9 h1, #textslide11 h1, #textslide12 h1, #textslide13 h1,#textslide14 h1, #textslide15 h1, #textslide16 h1{
+.slider2-wrapper .textslide h1{
     display: block;
     align-items: end;
     padding-bottom: 5px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 27px;
-    font-weight: 400;
+    font-size: 26.2px;
+    font-weight: 500;
     font-style: normal;
     line-height: 0.8;
     color: black;
-    white-space: nowrap;
 }
 #textslide10 h1{
     display: block;
@@ -520,7 +520,7 @@ body{
     margin-left: -10px;
     padding-bottom: 5px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 27px;
+    font-size: 26.2px;
     font-weight: 400;
     font-style: normal;
     line-height: 0.8;
@@ -547,6 +547,7 @@ body{
     font-size: 14px;
     font-weight: 700;
     font-style: normal;
+    margin-top: 5px;
 }
 #textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide6 h4, #textslide7 h4, #textslide8 h4, #textslide9 h4, #textslide10 h4, #textslide11 h4, #textslide12 h4, #textslide13 h4{
     padding: 5px;
@@ -612,201 +613,58 @@ body{
     border-radius: 20px;
     width: 90px; 
 }
+@media screen and (max-width:1200) {
+    
+    #textslide10 h1{
+        font-size: 19px;
+    }
+}
 @media screen and (max-width: 790px) {
+    .textslide {
+        height: 350px;
+    }
     .slider2-wrapper .textslide a img{
         height: 250px;
     }
-}
-
-
-.slider2-wrapper{
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    min-height: 200px;
-    overflow: auto;
-    width: 100%;
-    max-width: 1980px;
-    margin: auto;
-    padding-bottom: 100px;
-    background-color: #f0f0f0;
-}
-.slider2-wrapper i{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: transform 0.1s linear;
-    background-color: transparent;
-    color: #FFF;
-    font-size: 3vw;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-    font-style: normal;
-}
-.slider2-wrapper i:active{
-    transform: translateY(-50%) scale(0.85);
-}
-#prev2{
-    left: 20px;
-}
-#next2{
-    right: 50px;
-}
-
-.carousel li {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-    height: 500px;
-    width: 100%;
-    margin-top: 40px;
-    cursor: pointer;
-}
-.carousel.dragging .card{
-    cursor: grab;
-    user-select: none;
-}
-.slider2-wrapper .carousel {
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: auto;
-    gap: 10px;
-    overflow-x: hidden;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-}
-.carousel .card{
-    scroll-snap-align: start;
-}
-.slider2-wrapper .carousel .textslide a img{
-    height: 380px;
-    width: auto;
-    margin: auto;
-}
-
-#textslide1, #textslide2, #textslide3, #textslide4, #textslide5, #textslide6, #textslide7, #textslide8, #textslide9, #textslide10, #textslide11, #textslide12, #textslide13 {
-    display: block;
-    align-items: center;
-    left: 50%;
-    padding-bottom: 10px;
-}
-
-#textslide1 h1, #textslide2 h1, #textslide3 h1, #textslide4 h1, #textslide5 h1, #textslide6 h1, #textslide7 h1, #textslide8 h1, #textslide9 h1, #textslide11 h1, #textslide12 h1, #textslide13 h1{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 27px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 0.8;
-    color: black;
-    white-space: nowrap;
-}
-#textslide10 h1{
-    display: block;
-    align-items: center;
-    margin-left: -10px;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 27px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 0.8;
-    color: black;
-    text-align: end;
-    max-width: 290px;
-    margin-bottom: -22px;
-}
-
-#textslide1 h2, #textslide2 h2, #textslide3 h2, #textslide4 h2, #textslide5 h2, #textslide6 h2, #textslide7 h2, #textslide8 h2, #textslide9 h2, #textslide10 h2, #textslide11 h2, #textslide12 h2, #textslide13 h2{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    font-style: normal;
-}
-#textslide1 h3, #textslide2 h3, #textslide3 h3, #textslide4 h3, #textslide5 h3, #textslide6 h3, #textslide7 h3, #textslide8 h3, #textslide9 h3, #textslide10 h3, #textslide11 h3, #textslide12 h3, #textslide13 h3{
-    display: block;
-    align-items: end;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    font-style: normal;
-}
-#textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide6 h4, #textslide7 h4, #textslide8 h4, #textslide9 h4, #textslide10 h4, #textslide11 h4, #textslide12 h4, #textslide13 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 125px;
-}
-
-#textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide8 h4 {
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 125px;
-}
-
-#textslide6 h4, #textslide7 h4,  #textslide9 h4, #textslide10 h4, #textslide11 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 73px;    
-}
-
-#textslide12 h4, #textslide13 h4{
-    padding: 5px;
-    align-items: center;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    font-style: normal;
-    border: solid 1px black;
-    border-radius: 20px;
-    width: 83px; 
-}
-@media screen and (max-width: 790px) {
-    .slider2-wrapper .carousel{
-        grid-auto-columns: auto;
+    .slider2-wrapper .textslide h1{
+        font-size: 18px;
     }
-    .slider2-wrapper i{
-        height: 40px;
-        width: 40px;
-        text-align: center;
-        line-height: 50px;
-        background-color: transparent;
-        color: #FFF;
-        font-size: 5vw;
+    #textslide10 h1{
+        margin-left: -5px;
+        font-size: 17px;
+        max-width: 190px;
+        margin-bottom: -13px;
+    }
+    #textslide1 h2, #textslide2 h2, #textslide3 h2, #textslide4 h2, #textslide5 h2, #textslide6 h2, #textslide7 h2, #textslide8 h2, #textslide9 h2, #textslide10 h2, #textslide11 h2, #textslide12 h2, #textslide13 h2, #textslide14 h2, #textslide15 h2, #textslide16 h2{
+        font-size: 12px;
+    }
+    #textslide1 h3, #textslide2 h3, #textslide3 h3, #textslide4 h3, #textslide5 h3, #textslide6 h3, #textslide7 h3, #textslide8 h3, #textslide9 h3, #textslide10 h3, #textslide11 h3, #textslide12 h3, #textslide13 h3, #textslide14 h3, #textslide15 h3, #textslide16 h3{
+        font-size: 11px;
+    }
+    #textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide6 h4, #textslide7 h4, #textslide8 h4, #textslide9 h4, #textslide10 h4, #textslide11 h4, #textslide12 h4, #textslide13 h4{
+        font-size: 10px;
+    }
+    
+    #textslide1 h4, #textslide2 h4, #textslide3 h4, #textslide4 h4, #textslide5 h4, #textslide8 h4 {
+        font-size: 10px;
+        width: 105px;
+    }
+    
+    #textslide6 h4, #textslide7 h4,  #textslide9 h4, #textslide10 h4, #textslide11 h4{
+        font-size: 10px;
+        width: 63px;    
+    }
+    
+    #textslide12 h4, #textslide13 h4, #textslide14 h4{
+        font-size: 10px;
+        width: 72px; 
+    }
+    
+    #textslide15 h4, #textslide16 h4{
+        font-size: 10px;
+        width:75px; 
     }
 }
-
 footer {
     background-color: black;
     padding: 20px 30px 15px;
